--- a/views/partials/admin/ordermanagmentPopup.ejs
+++ b/views/partials/admin/ordermanagmentPopup.ejs
@@ -2,7 +2,8 @@
 <%-include("head.ejs")%>
 <body class="bg-slate-200 ">
     <div class="fixed inset-0 flex justify-center items-center bg-[rgba(0,0,0,0.3)] hidden" id="ordermanagmentPopup">
-        <form action="" class=" bg-white rounded-lg w-fit   py-8 px-5 relative  text-sm pr-8 pt-10 grid grid-cols-2 grid-rows-2">
+        <form id="orderStatusUpdateForm" action="" method="post" class=" bg-white rounded-lg w-fit   py-8 px-5 relative  text-sm pr-8 pt-10 grid grid-cols-2 grid-rows-2">
+            <input type="text" hidden name="Ids" id="orderAndUserId">
             <div class="shadow-xl px-2 py-3 rounded-lg mr-3 mb-3 max-w-sm max-h-72 overflow-y-auto"><!--First part-->
                 <table class=""> 
                     <tr class=" ">
@@ -11,61 +12,42 @@
                     </tr>
                     <tr class="text-[#333333]">
                         <td class="">Name</td>
-                        <td>Shibil Muhammad</td>
+                        <td id="a-name"></td>
                     </tr>
                     <tr class="text-[#333333]">
                         <td>Phone</td>
-                        <td>8086812602 </td>
+                        <td id="a-phone">8086812602 </td>
                     </tr>
                     <tr class="text-[#333333]">
                         <td class="">House No/Name</td>
-                        <td>356 </td>
+                        <td id="a-house" >356 </td>
                     </tr>
                     <tr class="text-[#333333]">
                         <td>Area</td>
-                        <td>vadakra </td>
+                        <td id="a-area">vadakra </td>
                     </tr>
                     <tr class="text-[#333333]">
                         <td>City</td>
-                        <td>Kozhickode </td>
+                        <td id="a-city">Kozhickode </td>
                     </tr>
                     <tr class="text-[#333333]">
                         <td>State</td>
-                        <td>Kerala </td>
+                        <td id="a-state">Kerala </td>
                     </tr>
                     <tr class="text-[#333333]">
                         <td>Pincode</td>
-                        <td>673524 </td>
+                        <td id="a-pinCode">673524 </td>
                     </tr>
                     <tr class="text-[#333333]"> 
                         <td>Land Mark</td>
-                        <td>Near kuniyil thazhe juma masjid 
+                        <td id="a-landMark">Near kuniyil thazhe juma masjid 
                         </td>
                     </tr>
                    </table>
             </div>
-           <div class="shadow-xl px-2 py-3 rounded-lg mb-3 max-h-72 overflow-y-auto">  <!--second part-->
-            <h1 class="text-sm font-semibold">Products</h1>
-            <div class="flex space-x-3  border-[.1px] border-gray-400">
-                <div class="w-4/12 flex justify-center items- border-r-[.1px] border-gray-400">
-                    <div class="py-3 ">
-                        <img class="h-20" src="/images/alchemist.jpeg" alt="">
-                        <div class="bg-[#E8E8E8] text-[10px] flex justify-around mt-2 rounded-sm whitespace-now">
-                            <p class="text-gray-500">Qty</p> <span>2</span>
-                        </div>
-                       
-                    </div>
-                </div>
-                <div class="flex flex-col justify-center">
-                    <h1 class="text-lg text-[#4B727A] font-semibold">The Alchemist</h1>
-                    <h2 class="text-[#5E8E99] text-base">Paulo Coelho </h2>
-                    <div class="flex space-x-1 items-center">
-                        <p class="font-semibold">₹150</p><span class="text-xs line-through text-[#666666]">MRP 250</span>
-                    </div> 
-                </div>
-            </div>
-            
-          
+           <div class="shadow-xl px-2 py-3 rounded-lg mb-3 max-h-72 overflow-y-auto" id="productsContainer">  <!--second part-->
+                    <h1 class="text-sm font-semibold">Products</h1>
+                    
            </div>
            <div class="shadow-xl px-2 py-3 rounded-lg mr-3">  <!--third part-->
             <table> 
@@ -75,27 +57,31 @@
                 </tr>
                 <tr class="text-[#333333">
                     <td class="">Payment Method</td>
-                    <td>Debit Card</td>
+                    <td id="paymentMethod">Debit Card</td>
                 </tr>
                 <tr>
                     <td>Shipping charge</td>
                     <td>₹40 </td>
                 </tr>
                 <tr class="text-[#333333">
+                    <td class="">MRP</td>
+                    <td id="totalMRP"></td>
+                </tr>
+                <tr class="text-[#333333">
                     <td class="">Discount</td>
-                    <td>₹40 </td>
+                    <td id="totalDiscount">₹40 </td>
                 </tr>
                 <tr class="text-[#333333">
                     <td>Total Amount </td>
-                    <td>₹400 </td>
+                    <td id="totalAmount">₹400 </td>
                 </tr>
                 <tr class="text-[#333333">
                     <td>Phone</td>
-                    <td>3022333453 </td>
+                    <td id="phoneNum">3022333453 </td>
                 </tr>
                 <tr text-[#333333>
                     <td>Created on</td>
-                    <td>dd/mm/yyyy 12:14:25 am </td>
+                    <td id="dateofOrder">dd/mm/yyyy 12:14:25 am </td>
                 </tr>
                </table>
            </div>
@@ -105,19 +91,23 @@
                     <label for="">Order Status</label>
                     <div>
                         <div class="flex items-center space-x-3">
-                            <input type="radio" name="status" id="Packed">
+                            <input  type="radio" value="ordered" name="status" id="ordered">
+                            <label for="ordered">Ordered</label>
+                        </div>
+                        <div class="flex items-center space-x-3">
+                            <input  type="radio" value="Packed" name="status" id="Packed">
                             <label for="Packed">Packed</label>
                         </div>
                         <div class="flex items-center space-x-3">
-                            <input type="radio" name="status" id="Shipped">
+                            <input type="radio" value="Shipped" name="status" id="Shipped">
                             <label for="Shipped">Shipped</label>
                         </div>
                         <div class="flex items-center space-x-3"> 
-                            <input type="radio" name="status" id="Delivered">
+                            <input value="Delivered" type="radio" name="status" id="Delivered">
                             <label for="Delivered">Delivered</label>
                         </div>
                         <div class="flex items-center space-x-3">
-                            <input type="radio" name="status" id="Cancelled">
+                            <input value="Cancelled" type="radio" name="status" id="Cancelled">
                             <label for="Cancelled">Cancelled</label>
                         </div>
                         
