--- a/views/user/orderSuccessful.ejs
+++ b/views/user/orderSuccessful.ejs
@@ -23,14 +23,14 @@
                     </div>
                 </div>
                
-                <div class="flex items-center justify-between font-semibold border-y-[.1px] border-y-gray-300 cursor-pointer">
+                <a href="/user/orderSummery/orderSuccessful" class="flex items-center justify-between font-semibold border-y-[.1px] border-y-gray-300 cursor-pointer">
                     <p>See order summery</p>
                     <div class=" rounded-[50%] cursor-pointer bg-gray-100 m-[5px] inline-block">
                         <span class="material-symbols-outlined  text-center h-5 w-5 align-middle table-cell text-[#666666] ">
                             chevron_right
                         </span>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </main>  
