--- a/views/admin/adminOrders.ejs
+++ b/views/admin/adminOrders.ejs
@@ -35,30 +35,28 @@
                 <div class="flex space-x-6">
                     <form action="">
                         <label class="text-xs text-[#333333]" for="">sort</label>
-                        <select name="" id="" class="rounded-md px-2 py-1 text-xs text-[#666666 outline outline-[.1px] outline-gray-400">
-                            <option  value="">Date</option>
-                            <option value="">Price</option>
+                        <select  name="" id="sortSelect" class="rounded-md px-2 py-1 text-xs text-[#666666 outline outline-[.1px] outline-gray-400">
+                            <option  value="Date">Date</option>
+                            <option value="Price">Price</option>
                         </select>
                         <label class="text-xs text-[#333333]" for="">by</label>
-                        <select name="" id="" class=" outline outline-[.1px] outline-gray-400 rounded-md px-2 py-1 text-xs text-[#666666]">
-                            <option value="">All</option>
-                            <option value="">Ascending
-                            </option>
-                            <option value="">Descending</option>
+                        <select name="" id="sortHow" class=" outline outline-[.1px] outline-gray-400 rounded-md px-2 py-1 text-xs text-[#666666]">
                         </select>
                     </form>
                     <form action="">
-                        <select name="" id=""  class=" outline outline-[.1px] outline-gray-400 rounded-md px-2 py-1 text-xs text-[#666666]">
-                            <option value="">Delivered</option>
-                            <option value="">Packed</option>
-                            <option value="">Shipped</option>
-                            <option value="">Cancelled</option>
+                        <select name="" id="filterValues"  class=" outline outline-[.1px] outline-gray-400 rounded-md px-2 py-1 text-xs text-[#666666]">
+                            <option disabled selected value="">Filter</option>
+                            <option value="ordered">Ordered</option>
+                            <option value="Packed">Packed</option>
+                            <option value="Shipped">Shipped</option>
+                            <option value="Delivered">Delivered</option>
+                            <option value="Cancelled">Cancelled</option>
                         </select>
                     </form>
                 </div>
-                <form action="">
+                <form id="searchProductForm" action="">
                     <div class="flex items-center rounded-md bg-white    text-[#666666] outline outline-[.1px] outline-gray-400">
-                        <input type="text" class="outline-none rounded-md pl-3 text-xs w-80 placeholder:text-xs" name="" id="" placeholder="Search customers.. ">
+                        <input type="text" class="outline-none rounded-md pl-3 text-xs w-80 placeholder:text-xs" name="" id="searchValue" placeholder="Search customers.. ">
                         <div class="bg-[#DAA520] px-1 py-1 rounded-md h-full">
                             <img src="/images/search white.png" class="h-4" alt="">
                         </div>
@@ -76,38 +74,9 @@
                     <th class="font-medium text-center">Status</th>
                     <th class="rounded-tr-md font-medium text-center">Action</th>
                 </tr>
-                <%orders.forEach(function(data){%>
-                    <tr class="bg-white  text-sm border-b-[.1px] border-b-[#666666] ">
-                        <td class="ps-3 py-2 max-w-[14rem]  pr-6"><%=data.orderId %> </td>
-                        <td class="max-w-[14rem] whitespace-pre-line pr-6 font-medium"><%=data.address.name %>
-                            <%=data.address.house %>,<%=data.address.area %>
-                            <%=data.address.town %>  ,<%=data.address.pinCode %>
-                        </td>
-                        <td><%=data.phone %></td>
-                        <td class="text-center "><%=data.date %></td>
-                        <td class="text-center">₹<%=data.totalOrderPrice %></td>
-                        <td class= "">
-                            <div class="flex justify-center items-center  rounded-full text-center w-2/3 ml-5 <%=  data.status === 'Cancelled' ? 'bg-[#FBEBEC] text-[#B16D70]' :
-                            data.status === 'Packed' ? 'bg-[#FDE68A] text-[#6B7280]' :
-                            data.status === 'Shipped' ? 'bg-[#93C5FD] text-[#1E3A8A]' :
-                            data.status === 'ordered' ? 'bg-[#FFD700] text-[#4F772D]'  :
-                            data.status === 'Delivered' ? 'bg-[#C6F6D5] text-[#065F46]' :
-                            ''  %>">
-                                <!-- Content goes here -->
-                                <div>
-                                    <%=data.status%>
-                                </div>
-                            </div>
-                        </td>
-                        <td>
-                            <div id="<%=data.userId%>-<%=data.orderId%>"  class="flex justify-center space-x-4 cursor-pointer" onclick="showEditOrder(this)">
-                                <img class="h-4" src="/images/edit blue.png" alt="">
-                            </div>
-                        </td>
-                    </tr>
-                    
-               <%  })  %>
-                
+                <tbody id="table-container" > 
+                    <%-include("../partials/admin/ordersTabledata.ejs")%>
+                </tbody>
             </table>
            
 
