--- a/views/user/orderSummery.ejs
+++ b/views/user/orderSummery.ejs
@@ -2,6 +2,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <link rel="stylesheet" href="/css/user/header.css">
 <link rel="stylesheet" href="">
+<div class="searchResult-Container"></div>
 <body class="bg-[#F2F2F2] flex flex-col h-screen pb-2">
     <%-include('../partials/user/headerPhone.ejs')%>
     <%-include('../partials/user/HeaderDesktopUser.ejs')%>
@@ -51,7 +52,7 @@
             </div>
         </div>
         <% order.products.forEach(function(data){%>
-            <div class="bg-white rounded-md px-5 py-3 space-y-3 drop-shadow-sm mt-3" ><!--Product show--> 
+            <div class="bg-white rounded-md px-5 py-3 space-y-3 drop-shadow-sm mt-3 relative" ><!--Product show--> 
                 <div class="flex space-x-3 items-center border-b "> 
                     <div class="lg:w-4/12  w-5/12 border-r pr-3 pb-2">
                         <div class="w-full ">
@@ -66,6 +67,12 @@
                             <p class="text-sm text-[#666666] line-through mt-[-6px]">MRP <%=data.product.MRP %></p>
                         </div>
                     </div>
+                    <button href="" id="downloadButton" data-product-id="<%=order._id%>" class="px-2 py-1 absolute top-3 right-2 bg-blue-200 lg:right-5 lg:top-6 text-blue-950 rounded-md text-xs whitespace-nowrap flex justify-center items-center">
+                        <p>Inovoice</p>
+                        <span class="material-symbols-outlined text-xs">
+                            download
+                        </span>
+                    </button>
                 </div>
             </div>
        <%  })%> 
@@ -119,7 +126,7 @@
             <div href="" class="flex items-center justify-between">
                 <div>
                     <p class="text-base font-semibold pb-3">Deliver to</p>
-                    <p class="text-[#333333] font-semibold text-sm"><%=order.address.name %></p>
+                    <p class="text-[#333333] font-semibold text-sm capitalize"><%=order.address.name %></p>
                      <p class="text-[#333333] text-sm"><%=order.address.house %> </p>
                     <p class="text-[#333333] text-sm"><%=order.address.area %> </p>
                     <p class="text-[#333333] text-sm"><%=order.address.town %>, <%=order.address.pinCode %> </p>
@@ -134,8 +141,29 @@
         <% } else { %>
             <div class="my-7"></div>
         <% } %>
-        
+        <div id="loadingIndicator" class="loading-indicator" style=" display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: rgba(255, 255, 255, 0.8);
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        z-index: 999;">Preparing Invoice...</div>
+
+        <div class="" id="HiddenInvoice">
+
+        </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.min.js" integrity="sha512-csNcFYJniKjJxRWRV1R7fvnXrycHP6qDR21mgz1ZP55xY5d+aHLfo9/FcGDQLfn2IfngbAHd8LdfsagcCqgTcQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+   
     
 </body>
+
+
+
+
 <script src="../../javascripts/user/common.js"></script>
+<script src="../../javascripts/user/orderSummery.js"></script>
