--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -1,4 +1,4 @@
 <header class="h-16 bg-[#5E8E99] flex justify-between px-10 items-center ">
     <a href=""><img class="w-40" src="/images/Logo.png" alt=""></a>
-    <a href=""><img class="h-5" src="/images/logout white.png" alt=""></a>
+    <a href="/admin/logOut"><img class="h-5" src="/images/logout white.png" alt=""></a>
 </header>
