--- a/views/partials/user/userFooter.ejs
+++ b/views/partials/user/userFooter.ejs
@@ -1,19 +1,19 @@
 <footer class="bg-[#E1E0E0] py-4 ">
     <div class="flex justify-evenly font-medium text-[10px] text-[#666666]">
         <div class="flex flex-col text-start">
-            <a href="">About Us</a>
-            <a href="">Contact Us</a>
-            <a href="">Mail Us</a>
+            <a class="hover:scale-105 hover:text-black" href="/user/aboutUs">About Us</a>
+            <a  class="hover:scale-105 hover:text-black" href="/user/contactUs">Contact Us</a>
+            <a class="hover:scale-105 hover:text-black" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=binbookskerala@gmail.com" target="_blank">Mail Us</a>
         </div>
         <div class="flex flex-col text-start">
-            <a href="">Sign in</a>
-            <a href="">Sign up</a>
-            <a href="">Sigh Out</a>
+            <a class="hover:scale-105 hover:text-black" href="/user/login">Sign in</a>
+            <a  class="hover:scale-105 hover:text-black"href="/user/login">Sign up</a>
+            <a  class="hover:scale-105 hover:text-black" href="/user/logOut">Sigh Out</a>
         </div>
         <div class="flex flex-col text-start">
-            <a href="">Your Account </a>
-            <a href="">Your Orders</a>
-            <a href="">Become A seller</a>
+            <a class="hover:scale-105 hover:text-black" href="/user/myAccount">Your Account </a>
+            <a class="hover:scale-105 hover:text-black" href="/user/yourOrders">Your Orders</a>
+            <a class="hover:scale-105 hover:text-black"  href="/user/contactUs">Become A seller</a>
 
         </div>
     </div>
