--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -65,7 +65,7 @@
                             <img class="h-4" src="/images/open-book blue.png" alt="">
                             <p class="text-sm text-[#666666]">About Us</p>
                         </a>
-                        <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100  ">
+                        <a href="/user/contactUs" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100  ">
                             <img class="h-4" src="/images/phone blue filled.png" alt="">
                             <p class="text-sm text-[#666666]">Contact Us</p>
                         </a>
@@ -251,7 +251,7 @@
                         <img class="h-4" src="/images/open-book blue.png" alt="">
                         <p class="text-sm text-[#666666]">About Us</p>
                     </a>
-                    <a href="/admin/banner" class="whitespace-nowrap flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100  ">
+                    <a href="/user/contactUs" class="whitespace-nowrap flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100  ">
                         <img class="h-4" src="/images/phone blue filled.png" alt="">
                         <p class="text-sm text-[#666666]">Contact Us</p>
                     </a>
